[project]
name = "databricks-bundles"
description = "Python support for Declarative Automation Bundles"
version = "1.5.0"

authors = [
    { name = "Gleb Kanterov", email = "gleb.kanterov@databricks.com" },
]

readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
]

[project.urls]
Changelog = "https://github.com/databricks/cli/blob/main/CHANGELOG.md"
Documentation = "https://databricks.github.io/cli/python/"
Issues = "https://github.com/databricks/cli/issues"
Repository = "https://github.com/databricks/cli/tree/main/python"

[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
  "pyright==1.1.380",
  "pytest-cov==5.0.0",
  "pytest==9.0.3",
  "sphinx==8.0.2",
  "typing_extensions==4.12.2",
]

[tool.flit.module]
name = "databricks"
packages = ["databricks"]

[tool.pytest.ini_options]
addopts = "-ra -q -vv"
testpaths = [
    "databricks_tests",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".venv",
    "codegen",
    "docs",
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "All"

executionEnvironments = [
    { root = "." },
]

venvPath = "."
venv = ".venv"
