[project]
name = "databricks-bundles"
description = "Python support for Databricks Asset Bundles"
version = "0.243.0-dev"

authors = [
    { name = "Gleb Kanterov", email = "gleb.kanterov@databricks.com" },
]

readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

dependencies = [
]

[tool.uv]
dev-dependencies = [
  "pyright==1.1.380",
  "pytest-cov==5.0.0",
  "pytest==8.3.3",
  "ruff==0.6.8",
  "sphinx==8.0.2",
  "typing_extensions==4.12.2",
]

[tool.setuptools]
py-modules = ["databricks"]

[tool.setuptools.package-data]
"databricks.bundles" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra -q -vv"
testpaths = [
    "databricks_tests",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".venv",
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "All"

executionEnvironments = [
    { root = "." },
]

venvPath = "."
venv = ".venv"

[tool.ruff]
# See https://docs.astral.sh/ruff/rules/
lint.select = [
    "E4",
    "E7",
    "E9",
    "N", # pep8-naming
    "F", # flake8
    "I", # isort
]
