[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "apps_mcp_evals"
version = "0.1.0"
description = "Continuous evaluation framework for Apps-MCP code generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.15.0",
    "fire>=0.7.1",
]

[project.scripts]
main = "src.run_evals:main"

[tool.ruff]
line-length = 120
target-version = "py310"
