[project]
name = "codegen"
version = "0.1.0"
description = "Code generator for Python"
requires-python = "==3.13.*" # constrained version for deterministic output
dependencies = []

[tool.pytest.ini_options]
addopts = "-ra -q -vv"
testpaths = [
    "codegen_tests",
]

[tool.uv]
dev-dependencies = [
  "pytest==8.3.3",
]
