[project]
name    = "my_default_python"
version = "0.0.1"
authors = [{ name = "[USERNAME]" }]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    # Code completion support for DLT
    "databricks-dlt",
    "pytest",

    # databricks-connect can be used to run parts of this project locally.
    # See https://docs.databricks.com/dev-tools/databricks-connect.html.
    #
    # databricks-connect is automatically installed if you're using Databricks
    # extension for Visual Studio Code
    # (https://docs.databricks.com/dev-tools/vscode-ext/dev-tasks/databricks-connect.html).
    #
    # To manually install databricks-connect, either follow the instructions
    # at https://docs.databricks.com/dev-tools/databricks-connect.html
    # to install the package system-wide. Or uncomment the line below to install a
    # version of db-connect that corresponds to the Databricks Runtime version used
    # for this project.
    "databricks-connect>=15.4,<15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_default_python"]

[project.scripts]
main = "my_default_python.main:main"
